--- a/pages/savedPasswords.html
+++ b/pages/savedPasswords.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="savedPasswords.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/6290499b5f.js" crossorigin="anonymous"></script>
-
-    <script src="script.js" defer></script>
+    <script src="../script/script.js" defer></script>
     <title>passGen</title>
 </head>
 
@@ -19,8 +17,8 @@
         <div id="navbar">
             <ul>
                 <li class="appName">Password Generator</li>
-                <li class="navLinks"><a href="savedpasswords.html">Saved Passwords</a></li>
-                <li class="navLinks"><a href="index.html">Generator</a></li>
+                <li class="navLinks"><a href="/pages/savedPasswords.html">Saved Passwords</a></li>
+                <li class="navLinks"><a href="/pages/home.html">Generator</a></li>
             </ul>
             <i class="fa-solid fa-bars menuIcon"></i>
         </div>
