--- a/pages/home.html
+++ b/pages/home.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="personalizedItem">
                             <input type="checkbox" id="specialCharCheck">
-                            <label for="specialCharCheck">Special Characters</label>
+                            <label for="specialCharCheck">Special Char</label>
                         </div>
                         <div class="personalizedItem">
                             <input type="checkbox" id="numbersCheck">
@@ -110,9 +110,9 @@
                         <div class="personalizedItem">
                             <input type="number" id="lengthPersonalized" placeholder="Length" min="0" max="50">
                         </div>
-                        <div class="cardButton">
-                            <button id="generateButtonPersonalized">Generate</button>
-                        </div>
+                    </div>
+                    <div class="cardButton">
+                        <button id="generateButtonPersonalized">Generate</button>
                     </div>
                 </div>
             </div>
