--- a/pages/savedPasswords.html
+++ b/pages/savedPasswords.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/savedPasswords.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../script/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6290499b5f.js" crossorigin="anonymous"></script>
     <title>passGen</title>
 </head>
 
@@ -20,20 +25,11 @@
                 <li class="navLinks"><a href="/pages/savedPasswords.html">Saved Passwords</a></li>
                 <li class="navLinks"><a href="/pages/home.html">Generator</a></li>
             </ul>
-            <i class="fa-solid fa-bars menuIcon"></i>
         </div>
 
         <div id="savedPasswordsContainer">
             <div id="savedPasswordsBox">
-                <div class="savedPassword">
-                    <p>teste</p>
-                </div>
-                <div class="savedPassword">
-                    <p>teste</p>
-                </div>
-                <div class="savedPassword">
-                    <p>teste</p>
-                </div>
+
             </div>
 
         </div>
