--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
     <main>
         <div id="navbar">
             <ul>
-                <li class="appName">Password Generator</li>
+                <li class="appName"><a href="./home.html">Password Generator</a></li>
                 <li class="navLinks"><a href="savedpasswords.html">Saved Passwords</a></li>
                 <li class="navLinks"><a href="home.html">Generator</a></li>
             </ul>
@@ -35,7 +35,7 @@
             <div id="aboutPasswordContainer2">
                 <p>Password generated:</p>
                 <div id="displayPassword">
-                    <h2 id="passwordGenerated">Select a option...</h2>
+                    <p id="passwordGenerated">Select a option...</p>
                 </div>
                 <div id="savePassword">
                     <button id="savePasswordButton">Save password</button>
