--- a/pages/savedPasswords.html
+++ b/pages/savedPasswords.html
@@ -21,7 +21,7 @@
     <main>
         <div id="navbar">
             <ul>
-                <li class="appName">Password Generator</li>
+                <li class="appName"><a href="./home.html">Password Generator</a></li>
                 <li class="navLinks"><a href="/pages/savedPasswords.html">Saved Passwords</a></li>
                 <li class="navLinks"><a href="/pages/home.html">Generator</a></li>
             </ul>
@@ -29,12 +29,9 @@
 
         <div id="savedPasswordsContainer">
             <div id="savedPasswordsBox">
-
             </div>
-
         </div>
     </main>
-
 </body>
 
 </html>
