--- a/savedPasswords.html
+++ b/savedPasswords.html
@@ -21,9 +21,9 @@
     <main>
         <div id="navbar">
             <ul>
-                <li class="appName"><a href="home.html">Password Generator</a></li>
+                <li class="appName"><a href="index.html">Password Generator</a></li>
                 <li class="navLinks"><a href="savedPasswords.html">Saved Passwords</a></li>
-                <li class="navLinks"><a href="home.html">Generator</a></li>
+                <li class="navLinks"><a href="index.html">Generator</a></li>
             </ul>
         </div>
 
